# kube-rust

./: .gitignore  Cargo.toml  README.md  generate-client.sh  settings
crates/kubernetes-client/: Cargo.toml  README.md  git_push.sh
crates/kubernetes-client/.openapi-generator/: COMMIT  FILES  swagger.json-default.sha256
crates/kubernetes-client/docs/: AdmissionregistrationApi.md  AdmissionregistrationV1Api.md  AdmissionregistrationV1ServiceReference.md  AdmissionregistrationV1WebhookClientConfig.md  AdmissionregistrationV1beta1Api.md  AdmissionregistrationV1beta1ServiceReference.md  AdmissionregistrationV1beta1WebhookClientConfig.md  ApiextensionsApi.md  ApiextensionsV1Api.md  ApiextensionsV1ServiceReference.md  ApiextensionsV1WebhookClientConfig.md  ApiextensionsV1beta1Api.md  ApiextensionsV1beta1ServiceReference.md  ApiextensionsV1beta1WebhookClientConfig.md  ApiregistrationApi.md  ApiregistrationV1Api.md  ApiregistrationV1ServiceReference.md  ApiregistrationV1beta1Api.md  ApiregistrationV1beta1ServiceReference.md  ApisApi.md  AppsApi.md  AppsV1Api.md  AuthenticationApi.md  AuthenticationV1Api.md  AuthenticationV1TokenRequest.md  AuthenticationV1beta1Api.md  AuthorizationApi.md  AuthorizationV1Api.md  AuthorizationV1beta1Api.md  AutoscalingApi.md  AutoscalingV1Api.md  AutoscalingV2beta1Api.md  AutoscalingV2beta2Api.md  BatchApi.md  BatchV1Api.md  BatchV1beta1Api.md  CertificatesApi.md  CertificatesV1Api.md  CertificatesV1beta1Api.md  CoordinationApi.md  (+666 more)
crates/kubernetes-client/src/apis/: admissionregistration_api.rs  apis_api.rs  (+73 more)
src/: lib.rs  loader.rs  types.rs
(+635 files in other folders)
