[package]
name = "kube-rust"
version = "0.1.0"
authors = ["Albert <r.albert.huang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kubernetes-client = { path = "./crates/kubernetes-client" }

[workspace]
members = ["crates/*"]