[package]
name = "kube-rust"
version = "0.1.0"
authors = ["Albert <r.albert.huang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kubernetes-client = { path = "./crates/kubernetes-client" }
tokio = { version = "1.5.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0"
[dependencies.reqwest]
version = "^0.11"
default-features = true
features = ["json", "multipart"]

[workspace]
members = ["crates/*"]